gcc/testsuite/rust/rustc/ui/consts/const-extern-fn/issue-68062-const-extern-fns-dont-need-fn-specifier.rs
fn main() {}

#[cfg(FALSE)]
fn container() {
    const extern "Rust" PUT_ANYTHING_YOU_WANT_HERE bug() -> usize { 1 }
// { dg-error "" "" { target *-*-* } .-1 }
}

